# diffusion-lens

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py
dbt/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/models/features/: ftr_llm_analysis.sql  ftr_text_embeddings.sql  schema.yml
dbt/models/marts/: dim_prompts.sql  dim_users.sql  fct_generations.sql  fct_sessions.sql  schema.yml
dbt/models/metrics/: daily_metrics.sql  schema.yml  user_friction_summary.sql
dbt/models/staging/: schema.yml  sources.yml  stg_generations.sql  stg_prompts.sql  stg_users.sql
dbt/tests/: assert_cost_positive_for_success.sql  assert_daily_metrics_complete.sql  assert_friction_score_consistent.sql  assert_no_orphan_generations.sql  assert_no_orphan_prompts.sql  assert_session_dates_valid.sql  assert_tier_distribution_reasonable.sql  assert_user_signup_before_activity.sql
docs/: PRODUCTION_RIGOR_UPDATE.md
scripts/: backfill_metric.py  run_daily_simulation.py
src/: explore.ipynb
src/.ipynb_checkpoints/: explore-checkpoint.ipynb
src/copilot/: __init__.py  llm.py  prompt.py  sample.py  schema.py  test_copilot.py
src/enrichment/: __init__.py  precompute_embeddings.py  precompute_llm.py
src/explorer/: __init__.py  sample.py
src/ingestion/: diffusiondb_loader.py  download_images.py  link_images.py
src/pipeline/: assets.py  definitions.py  resources.py
src/simulation/: run_all.py  session_builder.py  telemetry_enricher.py  user_generator.py
tests/: __init__.py  test_pipeline.py
