[project]
name = "genai-session-analyzer"
version = "0.1.0"
description = "Local data platform analyzing GenAI session friction and costs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "datasets>=4.5.0",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.3",
    "faker>=37.12.0",
    "imagehash>=4.3.2",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=11.3.0",
    "plotly>=6.5.2",
    "polars>=1.36.1",
    "ruff>=0.14.14",
    "streamlit>=1.50.0",
    # ML Enrichment & SQL Copilot (Apple Silicon)
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    # Semantic Search embeddings
    "sentence-transformers>=3.3.0",
    "tqdm>=4.67.1",
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
